# jacktrip

./: meson.build
jacktrip/src/: AudioInterface.h  DataProtocol.h  JackAudioInterface.cpp  JackTrip.cpp  JackTrip.h  RtAudioInterface.cpp  RtAudioInterface.h  Settings.cpp  Settings.h  UdpDataProtocol.cpp  UdpDataProtocol.h  jacktrip_globals.cpp
jacktrip/ui-draft/: CMakeLists.txt  JTMainWindow.cpp  JTMainWindow.h
src/: AudioInterface.cpp  AudioInterface.h  DataProtocol.h  JackAudioInterface.cpp  JackAudioInterface.h  JackTrip.cpp  JackTrip.h  JackTripWorker.cpp  JitterBuffer.cpp  JitterBuffer.h  RingBuffer.cpp  RingBuffer.h  Settings.cpp  Settings.h  UdpDataProtocol.cpp  UdpDataProtocol.h  build  jacktrip.pro  jacktrip_globals.cpp
ui-draft/: CMakeLists.txt  JTMainWindow.cpp  JTMainWindow.h  MacInfo.plist.in  jacktripui_main.cpp
